generar token actualizado